
*Fixes and Improvements*
- Helper timers now increment on the widget and home page
- gold pass reminder no longer occurs before first season reset
- Added "Full Changelog" button to what's new
- Swapped places of "Import Data" and profile switcher
- added "open game settings" button to home and profile setup
- split onboarding into two pages for simplicity
- added detailed instructions to onboarding, improved flow
- goblin builder no longer breaks widgets, simply displays the 6 shortest upgrades
- Widgets should look the same across screen sizes
- Better asset fallback to prevent missing assets in almost all causes
- Widgets are now better with longer troop/building names
- lowered iOS requirement to iOS 18.0
- 4 builders now makes the widget 2x2 for better looks
- added notifications for helpers

1.0.3 - 1/27/26
Main Fix:
- Widgets fixed: Widgets should now work on all iOS/iPadOS versions and devices

- Added EU consent form
- fixed league icons naming error
- fixed hero levels in the profile tab not being relevant to current town hall
- wall costs now display billions properly
- wall costs now scale with gold pass

Planned:
- profile label on widgets
- fix wonky haptics
- Proirity notifications

1.1 -
First major feature release planned

*New Features*
* Lock Screen widget + toggle
* Shortcuts integration 
* Potions Snacks and other boosts
* Widget customization / themes
* War stats widget (?)
* Ability to set notifications to pre-notify in advance of upgrade completion
* Remove ? Hide selected home screen cards
* add gem rewards to achievements and remaining helper costs in gems 
*Hide sections on the home screen
*Upgrade history

1.2 (and beyond) - 

*New Features*
* Set up icloud sync for widgets / potential account management(?)
* New more elegant UI for the home screen cards as well as widgets
* Server hosting of assets and upgrade data to push info/asset updates without new app version
* Add "Progres" section to track time/cost remaining for each town hall